add settings for user editable fields and user deletion
