# backend/oqtopus_cloud/user/schemas/settings.py
@@ -1,0 +1,23 @@
+# generated by datamodel-codegen
+# ruff: noqa
+
+
+from __future__ import annotations
+
+from enum import Enum
+
+from pydantic import BaseModel
+
+
+class EditableField(str, Enum):
+    name = "name"
+    organization = "organization"
+
+
+class GetSettingsResponse(BaseModel):
+    """
+    detail of settings response
+    """
+
+    editable_fields: list[EditableField]
+    allow_deletion: bool
